--- a/views/index.pug
+++ b/views/index.pug
@@ -25,25 +25,14 @@ html
         span.user
             |&nbsp;Welcome: #{user.username}
             |&nbsp;
-    div
-        | Load Google File
-        br
-        form.aiaContentForm(method='POST' action='/aia/loadFromGoogle')
-            input(type='hidden', name='filePos', value='0')
-            select(name='fileInfo')
-                each googleFile in googleFiles
-                    option(value=googleFile.id+'|'+googleFile.name) #{googleFile.name}
-            |&nbsp;
-            button(type='submit', name='action', disabled=googleFiles.length==0, value='loadFile', onclick='showWaiting("Loading AIA file")') Load
     p &nbsp;
-    p
 
     div(style='display: flex; flex-flow: row nowrap; width:100%')
-        div(style='width: 40%; margin-right:15px;')
+        div(style='width: 50%; margin-right:15px;')
             div
-                | Load Primary Google File
+                | Source File
                 br
-                form.aiaContentForm(method='POST' action='/aia/loadFromGoogle')
+                form.aiaContentForm(method='POST' action='/aia/loadFromGoogle' style='white-space: nowrap;')
                     input(type='hidden', name='filePos', value='0')
                     select(name='fileInfo', onChange='primaryFileChange("' + (primaryAia?primaryAia.name:null) +'")')
                         option(value='') #{'<<Select File>>'}
@@ -53,19 +42,86 @@ html
                                 |#{googleFile.name}
                     |&nbsp;
                     button(type='submit', name='action', value='loadFile', onclick='showWaiting("Loading AIA file")') Load
-            div(style='border:1px solid black; padding: 5px;')
+            div(style='border:1px solid black; padding: 5px; margin-top:30px;')
                 if (primaryAia)
-                    div(style='display: flex; flex-flow: row wrap;')
-                        - var aiaFile = primaryAia
+                    - var aiaFile = primaryAia
+                    b #{aiaFile.name}
+                    br
+                    br
+                    |Screens
+                    each screen, i in aiaFile.screens
+                        div(style='padding-bottom:6px; padding-left: 15px; flex; flex-flow: row nowrap;')
+                            form.aiaContentForm(method='POST' action='/aia/modify', onsubmit='return validScreenName(this) && showWaiting("Renaming screen")'
+                                    stylex='display: inline-block;')
+                                input(type='hidden', name='fileName', value=aiaFile.name)
+                                input(type='hidden', name='version', value=aiaFile.version)
+                                input(type='hidden', name='originalName', value=screen.screenName)
+                                input(type='hidden' name='screenName' value=screen.screenName)
+                                input(type='text', name='newName', size='20', value=screen.screenName)
+                                |&nbsp;
+                                button(type='submit', name='action', value='renameScreen') Rename
+                                if secondaryAia
+                                    |&nbsp;&nbsp;&nbsp;
+                                    - var nameVersion = secondaryAia.name + '_' + secondaryAia.version
+                                    input(type='hidden' name='targetNameAndVersion' value=nameVersion)
+                                    button(type='submit', name='action', value='copyScreen' 
+                                        title='Copy to secondary file'
+                                        onclick='showWaiting("Copying screen")') Copy >>
+                    if aiaFile.screens.length == 0
+                        div(style='padding-bottom:6px; padding-left: 15px;')
+                            | No screens
+                    | Resources                    
+                    div(style='padding-bottom:6px; padding-left: 15px;')
+                        each resource in aiaFile.resources
+                            form.aiaContentForm(method='POST' action='/aia/modify', onsubmit='return validScreenName(this) && showWaiting("Renaming screen")'
+                                    stylex='display: inline-block;')
+                                |#{resource.name}
+                                if secondaryAia
+                                    input(type='hidden', name='fileName', value=aiaFile.name)
+                                    input(type='hidden', name='version', value=aiaFile.version)
+                                    input(type='hidden' name='screenName' value=resource.path)
+                                    |&nbsp;&nbsp;&nbsp;&nbsp;
+                                    - var nameVersion = secondaryAia.name + '_' + secondaryAia.version
+                                    input(type='hidden' name='targetNameAndVersion' value=nameVersion)
+                                    button(type='submit', name='action', value='copyScreen' 
+                                        title='Copy to secondary fileX'
+                                        onclick='showWaiting("Copying resource")') Copy >>
+
+                        if aiaFile.resources.length == 0
+                            | No resources
+                    div(style='margin-top: 10px; display: flex; flex-flow: row wrap; justify-content: center;')
                         form.aiaContentForm(method='POST' action='/aia/saveToGoogle')
-                            |#{aiaFile.name}
-                            |&nbsp;
                             input(type='hidden', name='fileName', value=aiaFile.name)
-                            button(type='submit', onclick='showWaiting("Saving changes")') Save changes
-                        |&nbsp;
+                            button(type='submit', onclick='showWaiting("Saving changes")') Save
+                        |&nbsp;&nbsp;
                         form.aiaContentForm(method='POST' action='/aia/modify', style='display: inline-block;')
                             input(type='hidden', name='fileName', value=aiaFile.name)
+                            input(type='hidden', name='filePos', value='0')
                             button(type='submit', name='action', value='unload', onclick='showWaiting("Unloading AIA file")') Unload
+                else
+                    p - no file selected yet
+                    
+
+        div(style='width: 40%;')
+            div
+                | Target File
+                br
+                form.aiaContentForm(method='POST' action='/aia/loadFromGoogle' style='white-space: nowrap;')
+                    input(type='hidden', name='filePos', value='1')
+                    select(name='fileInfo')
+                        option(value='') #{'<<Select File>>'}
+                        each googleFile in googleFiles
+                            option(value=googleFile.id+'|'+googleFile.name  
+                                    selected=(secondaryAia && googleFile.name == secondaryAia.name)) 
+                                |#{googleFile.name}
+                    |&nbsp;
+                    button(type='submit', name='action', value='loadFile', onclick='showWaiting("Loading AIA file")') Load
+            div(style='border:1px solid black; padding: 5px; margin-top:30px;')
+                if (secondaryAia)
+                    - var aiaFile = secondaryAia
+                    b #{aiaFile.name}
+                    br
+                    br
                     |Screens
                     each screen, i in aiaFile.screens
                         div(style='padding-bottom:6px; padding-left: 15px;')
@@ -85,86 +141,17 @@ html
                             |#{resource.name}
                         if aiaFile.resources.length == 0
                             | No resources
-                    
 
-        div(style='width: 40%;')
-            div
-                | Load Secondary Google File
-                br
-                form.aiaContentForm(method='POST' action='/aia/loadFromGoogle')
-                    input(type='hidden', name='filePos', value='0')
-                    select(name='fileInfo')
-                        option(value='') #{'<<Select File>>'}
-                        each googleFile in googleFiles
-                            option(value=googleFile.id+'|'+googleFile.name) #{googleFile.name}
-                    |&nbsp;
-                    button(type='submit', name='action', value='loadFile', onclick='showWaiting("Loading AIA file")') Load
+                    div(style='display: flex; flex-flow: row wrap; justify-content: center;')
+                        form.aiaContentForm(method='POST' action='/aia/saveToGoogle')
+                            input(type='hidden', name='fileName', value=aiaFile.name)
+                            button(type='submit', onclick='showWaiting("Saving changes")') Save
+                        |&nbsp;&nbsp;
+                        form.aiaContentForm(method='POST' action='/aia/modify', style='display: inline-block;')
+                            input(type='hidden', name='fileName', value=aiaFile.name)
+                            input(type='hidden', name='filePos', value='1')
+                            button(type='submit', name='action', value='unload', onclick='showWaiting("Unloading AIA file")') Unload
+                else
+                    p - no file selected yet
 
-    p &nbsp;
-    p &nbsp;
-    table.aiaContent
-        tr
-            th.aiaContentHr AIA file
-            th.aiaContentHr Rename screen
-            th.aiaContentHr Resources
-            th.aiaContentHr Copy screen or resource
 
-        each aiaFile in aiaFiles
-            tr.aiaContentRow
-                td.aiaContentTd
-                    |#{aiaFile.name}
-                    form.aiaContentForm(method='POST' action='/aia/saveToGoogle')
-                        input(type='hidden', name='fileName', value=aiaFile.name)
-                        button(type='submit', onclick='showWaiting("Saving changes")') Save changes
-                    br
-                    form.aiaContentForm(method='POST' action='/aia/modify')
-                        input(type='hidden', name='fileName', value=aiaFile.name)
-                        button(type='submit', name='action', value='unload', onclick='showWaiting("Unloading AIA file")') Unload
-                td.aiaContentTd
-                    each screen, i in aiaFile.screens
-                        div(style='padding-bottom:6px;')
-                                    form.aiaContentForm(method='POST' action='/aia/modify', onsubmit='return validScreenName(this) && showWaiting("Renaming screen")')
-                                        input(type='hidden', name='fileName', value=aiaFile.name)
-                                        input(type='hidden', name='version', value=aiaFile.version)
-                                        input(type='hidden', name='originalName', value=screen.screenName)
-                                        input(type='text', name='newName', size='20', value=screen.screenName)
-                                        |&nbsp;
-                                        button(type='submit', name='action', value='renameScreen') Rename
-                                        br
-                    if aiaFile.screens.length == 0
-                        | No screens
-
-                td.aiaContentTd
-                    each resource in aiaFile.resources
-                        |#{resource.name}
-                        br
-                    if aiaFile.resources.length == 0
-                        | No resources
-
-                td.aiaContentTd
-                    form.aiaContentForm(method='POST' action='/aia/modify')
-                        input(type='hidden', name='fileName', value=aiaFile.name)
-                        input(type='hidden', name='version', value=aiaFile.version)
-                        if aiaFile.screens.length > 0 && aiaFiles.length > 1
-                            |Copy&nbsp;
-                            select(name='screenName')
-                                optgroup(label='Screens')
-                                    each copyScreen in aiaFile.screens
-                                        option(value=copyScreen.screenName) #{copyScreen.screenName}
-                                optgroup(label='Resources')
-                                    each copyResource in aiaFile.resources
-                                        option(value=copyResource.path) #{copyResource.name}
-                            p
-                            | to&nbsp;
-                            select(name='targetNameAndVersion')
-                                each targetAiaFile in aiaFiles
-                                    if targetAiaFile.name != aiaFile.name
-                                        - nameVersion = targetAiaFile.name + '_' + targetAiaFile.version
-                                        option(value=nameVersion) #{targetAiaFile.name}
-                            |&nbsp;
-                            button(type='submit', name='action', value='copyScreen', onclick='showWaiting("Copying screen or image")') Go
-                        else if aiaFile.screens.length == 0
-                            | No screens to copy
-                        else
-                            | No files to copy screen to
-    br
